unit 1: pass data between 2 componet and config routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -331,6 +331,11 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<nav>
+  <ul>
+    <li><a routerLink="/child" routerLinkActive="active" ariaCurrentWhenActive="page">First Component</a></li>
+    <li><a routerLink="/parent" routerLinkActive="active" ariaCurrentWhenActive="page">Second Component</a></li>
+  </ul>
+</nav>
 
 <router-outlet />
